--- a/menu.html
+++ b/menu.html
@@ -155,7 +155,7 @@
         <a href="minecraft/EaglercraftX_1.8_u27_Offline_Signed.html" class="botao-roxo">jogar</a>
         <br>
         <br>
-      <a href="coisas/nao-clica.html" class="botao-roxo">o</a>
+      <a href="lista.html" class="botao-roxo">o</a>
         <h6>Copyright © 2077 os guri. Todos os direitos reservados</h6>
     </div>
 
